--- a/web/popcritic/package.json
+++ b/web/popcritic/package.json
@@ -19,6 +19,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "start:dev": "nodemon server.js",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
